fix: overflow + dialog state + dark mode styles

--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,7 @@ body {
 			rgba(61, 59, 53, 0.16) 0px 0px 0px 1px,
 			rgba(61, 59, 53, 0.08) 0px 2px 5px 0px;
 	}
+
 	.custom-box-shadow-dark {
 		@apply shadow-none; /* Ensure no default shadow from Tailwind */
 		box-shadow:
@@ -34,15 +35,31 @@ body {
 			rgba(210, 210, 210, 0.16) 0px 0px 0px 1px,
 			rgba(210, 210, 210, 0.08) 0px 2px 5px 0px;
 	}
+
 	.requiredButton {
 		@apply absolute -right-2 -top-2 flex h-4 w-4 items-center justify-center rounded-full bg-[#f3f3f3] pt-1.5 text-sm font-semibold dark:bg-[#242424] dark:text-[#d8d8d8];
 	}
+
 	.inputWrapper {
 		@apply custom-box-shadow dark:custom-box-shadow-dark relative mb-2.5 cursor-text rounded-md px-2 py-1.5 dark:bg-[#ffffff0e];
 	}
+
 	.inputBlock {
 		@apply relative h-full w-full px-1 text-[#BBBAB8] caret-black outline-none ring-0 before:absolute before:left-1 dark:text-[#5A5A5A] dark:caret-white;
 	}
+}
+
+.codex-editor__redactor {
+	padding: 0 0 1rem 0 !important;
+}
+
+.ce-toolbar__actions > div,
+.ce-toolbar__actions > span {
+	@apply dark:text-white dark:hover:bg-black/20;
+}
+
+.ce-block--selected .ce-block__content {
+	background-color: #7957ff40;
 }
 
 @layer base {
@@ -115,6 +132,7 @@ body {
 	* {
 		@apply border-border;
 	}
+
 	body {
 		@apply bg-background text-foreground;
 	}
